1:add the content change listener of Images DB, 1:添加对images表的数据库改变的监听

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,7 +62,7 @@
         </service>
 
         <provider
-            android:name="com.dhn.marrysocial.provider.DataSetProvider"
+            android:name="com.dhn.marrysocial.provider.DBContentChangeProvider"
             android:authorities="com.dhn.marrysocial.provider"
             android:exported="true"
             android:grantUriPermissions="true"
