--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,6 +47,8 @@
         </activity>
         <activity android:name=".activity.ReplyListsActivity" >
         </activity>
+        <activity android:name=".activity.ChatMsgActivity" >
+        </activity>
         <activity android:name=".test.MainActivity" >
         </activity>
 
