--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,10 +49,14 @@
         </activity>
         <activity android:name=".activity.ChatMsgActivity" >
         </activity>
+        <activity android:name=".activity.ContactsInfoActivity" >
+        </activity>
         <activity android:name=".test.MainActivity" >
         </activity>
 
         <service android:name=".services.ReadContactsIntentService" >
+        </service>
+        <service android:name=".services.DownloadChatMsgService" >
         </service>
         <service android:name=".services.UploadCommentsAndBravosAndReplysIntentService" >
         </service>
