add the feature: set the header background

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,8 @@
         </activity>
         <activity android:name=".activity.ContactsInfoActivity" >
         </activity>
+        <activity android:name=".activity.ChooseHeaderBackgroundActivity" >
+        </activity>
         <activity android:name=".test.MainActivity" >
         </activity>
 
