--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,12 @@
         </activity>
         <activity android:name=".activity.LoginActivity" >
         </activity>
+        <activity android:name=".activity.SettingsActivity" >
+        </activity>
+        <activity android:name=".activity.AboutUsActivity" >
+        </activity>
+        <activity android:name=".activity.ProductDescActivity" >
+        </activity>
         <activity android:name=".test.MainActivity" >
         </activity>
 
