--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,7 +47,10 @@
         </activity>
         <activity android:name=".activity.ReplyListsActivity" >
         </activity>
-        <activity android:name=".activity.ChatMsgActivity" >
+        <activity
+            android:name=".activity.ChatMsgActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden"
+            android:configChanges="orientation|keyboardHidden|navigation">
         </activity>
         <activity android:name=".activity.ContactsInfoActivity" >
         </activity>
