--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".MarrySocialApplication"
@@ -49,8 +51,12 @@
         </activity>
         <activity
             android:name=".activity.ChatMsgActivity"
-            android:windowSoftInputMode="adjustPan|stateHidden"
-            android:configChanges="orientation|keyboardHidden|navigation">
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:parentActivityName=".MarrySocialMainActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MarrySocialMainActivity" />
         </activity>
         <activity android:name=".activity.ContactsInfoActivity" >
         </activity>
