add the feature: forget password

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -78,6 +78,8 @@
         </activity>
         <activity android:name=".activity.ProductDescActivity" >
         </activity>
+        <activity android:name=".activity.ChangePasswordActivity" >
+        </activity>
         <activity android:name=".test.MainActivity" >
         </activity>
 
