--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:name=".MarrySocialApplication"
@@ -113,6 +114,14 @@
         <receiver android:name="com.dhn.marrysocial.broadcast.receive.NewTipsBroadcastReceiver" >
         </receiver>
         <receiver android:name="com.dhn.marrysocial.broadcast.receive.AuthCodeBroadcastReceiver" >
+        </receiver>
+        <receiver android:name="com.dhn.marrysocial.broadcast.receive.AutoRunBroadcastReceiver" >
+            <intent-filter>
+
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
         </receiver>
         <!--
                  <intent-filter>
