--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -111,6 +111,10 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name="com.pkjiao.friends.mm.photochoose.PhotoChooseActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name="com.pkjiao.friends.mm.test.MainActivity"
             android:screenOrientation="portrait" >
         </activity>
